<resources>
    <string name="app_name">Health App</string>
    <string name="title_bmi">BMI</string>
    <string name="title_kcal">Kcal Calculator</string>
    <string name="title_recipes">Recipes</string>
    <string name="input_age">Enter your age</string>
    <string name="input_weight">Enter your weight (kg)</string>
    <string name="input_height">Enter your height (cm)</string>
    <string name="btn_kcal">Calculate kcal</string>
    <string name="mrg_input_top">32</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="enter_weight_kg">Enter weight (kg)</string>
    <string name="enter_height_cm">Enter height (cm)</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="_200_kcal">200 kcal</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="shopping_item">Shopping Item</string>
    <string name="lista_zakup_w">Lista zakupów</string>
    <string name="shopping">Shopping</string>
    <string name="poka_histori_bmi">Pokaż historię BMI</string>
</resources>