<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/recipeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recipe_description"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeName"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/recipeCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_200_kcal"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeDescription"
        android:layout_marginTop="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
